--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@vis.gl/react-google-maps": "^1.0.1",
     "@chakra-ui/react": "^2.8.2",
     "@googlemaps/js-api-loader": "^1.16.6",
     "@react-google-maps/api": "^2.19.3",
@@ -41,6 +42,6 @@
     ]
   },
   "devDependencies": {
-    "@vis.gl/react-google-maps": "^1.0.0"
+   
   }
 }
